# ROBOT_POC

./: .gitignore
src/founction/move_robot/: README.md  package.xml  setup.py
src/founction/move_robot/launch/: move_robot_gui.launch.py
src/founction/move_robot/move_robot/: __init__.py  move_robot_gui.py
src/kinematic/wheeled_humanoid_moveit_fake/: CMakeLists.txt  README.md  package.xml
src/kinematic/wheeled_humanoid_moveit_fake/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robot_model.srdf
src/kinematic/wheeled_humanoid_moveit_fake/launch/: demo.launch.py
src/kinematic/wheeled_humanoid_moveit_fake/scripts/: attach_object_demo.py  attach_object_gui.py  fake_joint_driver.py  robot_description_publisher.py
src/robot/robot_model/: package.xml  setup.py
src/robot/robot_model/config/: joint_names_wheelrobot.yaml
src/robot/robot_model/launch/: rviz.launch.py
src/robot/robot_model/meshes/: Head_Link1.STL  Head_Link2.STL  Trunk_Link1.STL  Trunk_Link2.STL  Trunk_Link3.STL  Trunk_Link4.STL  base_link.STL  chassis_left_Link.STL  chassis_right_Link.STL  flange.STL  flange.dae  left_gripper_base_link.STL
src/robot/robot_model/meshes/AR5_P_L/: AR5_5_07L_base.stl  AR5_5_07L_link1.stl  AR5_5_07L_link2.stl  AR5_5_07L_link3.stl  AR5_5_07L_link4.stl  AR5_5_07L_link5.stl  AR5_5_07L_link6.stl  AR5_5_07L_link7.stl
src/robot/robot_model/meshes/AR5_P_R/: AR5_5_07R_base.stl  AR5_5_07R_link1.stl  AR5_5_07R_link2.stl  AR5_5_07R_link3.stl  AR5_5_07R_link4.stl  AR5_5_07R_link5.stl  AR5_5_07R_link6.stl  AR5_5_07R_link7.stl
src/robot/robot_model/meshes/CTM_2F_110/: Rleftinn_Link.STL  Rrightinn_Link.STL  base_link.STL  base_link_R.STL  left_kckle.STL  left_pad.STL  leftinn_Link.STL  leftout_Link.STL  right_kckle.STL  right_pad.STL  rightinn_Link.STL  rightout_Link.STL
src/robot/robot_model/robot_model/: __init__.py
src/robot/robot_model/rviz/: wheel_robot.rviz
src/robot/robot_model/urdf/: wheel_robot.urdf
src/robot/robot_model/worlds/: sample.sdf
src/robot/robot_model/xrdf/: modified.xrdf  wheeled_humanoid.xrdf
src/scene/workspace/: README.md  package.xml  setup.cfg  setup.py
src/scene/workspace/config/: default_workspace.json  ws_1213_2.json
src/scene/workspace/launch/: workspace_gui.launch.py
src/scene/workspace/workspace/: test_attach_detach.py  workspace_gui.py
