<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeled_humanoid_moveit_fake</name>
  <version>0.1.0</version>
  <description>
    Virtual robot MoveIt configuration for wheeled humanoid robot.
    Used for offline simulation and development without real hardware.
    Controller names are consistent with wheeled_humanoid_moveit for seamless deployment.
  </description>
  <maintainer email="shengyue.wang@anyverseintelligence.com">shengyue.wang</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt dependencies -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <!-- ROS2 dependencies -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>

  <!-- Robot model dependency -->
  <exec_depend>robot_model</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
